<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_profile"/>

    <item
        android:id="@+id/nav_order"
        android:title="@string/nav_order"
        android:icon="@drawable/ic_buy"/>

    <item
        android:id="@+id/nav_fav"
        android:title="@string/nav_fav"
        android:icon="@drawable/ic_heart"/>


</group>
    <item android:title=""></item>
    <item android:title=""></item>
    <item android:title=""></item>
    <item android:title=""></item>
    <item android:title=""></item>
    <item android:title=""></item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>